# pam_xml

./: AUTHORS  configure.ac
data/: pam-test.xml
docs/: DEFINITION  INSTALL  TODO
src/: Makefile.am  pam_xml.c  parser.c  xml.c  xml.h
